--- a/css/ica4.css
+++ b/css/ica4.css
@@ -26,13 +26,15 @@ body {
   a:link,
   a:visited {
     color: green;
-    background-color: #eeeeee;
-    border: 5px purple;
-    padding: 1em;
 
   }
 
   a:hover {
     text-decoration: none;
     color: green;
+  }
+  ul {
+    background-color: #eeeeee;
+    border: 5px purple;
+    padding: 1em;
   }
