--- a/css/ica4.css
+++ b/css/ica4.css
@@ -25,7 +25,7 @@ body {
 
   a:link,
   a:visited {
-    color: green;
+    color: #fb6542;
 
   }
 
@@ -35,6 +35,6 @@ body {
   }
   ul {
     background-color: #eeeeee;
-    border: 5px purple;
-    padding: 1em;
+    border: 5px solid purple;
+    padding: 30px;
   }
