--- a/css/ica5-style.css
+++ b/css/ica5-style.css
@@ -37,5 +37,22 @@
     color: white;
     text-shadow: 1px 1px 1px black;
   }
+
+  article {
+    background: url(top-image.png) no-repeat left top;
+    background: linear-gradient(to bottom, rgba(0,0,0,0.2), rgba(0,0,0,0) 20%, rgba(0,0,0,0) 80%, rgba(0,0,0,0.2)),
+                url(top-image.png) no-repeat left top,
+                url(bottom-image.png) no-repeat left bottom;
+    background-color: white;
+    border-top: 1mm solid red;
+    border-bottom: 1mm solid red;
+  }
+  
+  h1 {
+    background-image: url(logo.png);
+    /* filter: drop-shadow(3px 3px 3px black); */
+    border-radius: 64px;
+    box-shadow: 3px 3px 3px black;
+  }
   
   /* Your CSS below here */
