--- a/wa/wa11/wa11.css
+++ b/wa/wa11/wa11.css
@@ -13,6 +13,7 @@ html {
   body {
     font-family: Georgia, 'Times New Roman', Times, serif;
     background-color: #02283F;
+    color: white
   }
   
   .app {
