--- a/wa/wa13/wa13.css
+++ b/wa/wa13/wa13.css
@@ -6,15 +6,25 @@ h1 {
     font-size: 24px;
 }
 
-button {
-    padding: 10px 20px;
-    font-size: 18px;
-    margin: 10px;
+#volumeContainer {
+    width: 300px;
+    height: 100px;
+    margin: 20px auto;
+    cursor: pointer;
+    border: 1px solid #333;
+    overflow: hidden;
+    padding: 5px;
+    background-color: #eee;
+    border-radius: 5px;
 }
 
-#volumeSlider {
-    width: 200px;
-    margin: 20px auto;
+#volumeInput {
+    width: 100px;
+    margin-right: 10px;
+}
+
+#increaseBtn, #decreaseBtn {
+    margin-top: 10px;
 }
 
 #volumeStatus {
